@@ -53,10 +53,16 @@ extern "C" {
   extern unsigned int _amblksiz;
 
 /* Make sure that X86intrin.h doesn't produce here collisions.  */
+#if (!defined (_XMMINTRIN_H_INCLUDED) && !defined (_MM_MALLOC_H_INCLUDED) || defined(_aligned_malloc)
+#define __DO_ALIGN_DEFINES
+#endif
+
+#ifdef __DO_ALIGN_DEFINES
 #pragma push_macro("_aligned_free")
 #pragma push_macro("_aligned_malloc")
 #undef _aligned_free
 #undef _aligned_malloc
+#endif
 
 #define _mm_free(a) _aligned_free(a)
 #define _mm_malloc(a,b) _aligned_malloc(a,b)
@@ -69,8 +75,10 @@ extern "C" {
   void *__cdecl realloc(void *_Memory,size_t _NewSize);
   _CRTIMP void *__cdecl _recalloc(void *_Memory,size_t _Count,size_t _Size);
 
+#ifdef __DO_ALIGN_DEFINES
   _CRTIMP void __cdecl _aligned_free(void *_Memory);
   _CRTIMP void *__cdecl _aligned_malloc(size_t _Size,size_t _Alignment);
+#endif
 
   _CRTIMP void *__cdecl _aligned_offset_malloc(size_t _Size,size_t _Alignment,size_t _Offset);
   _CRTIMP void *__cdecl _aligned_realloc(void *_Memory,size_t _Size,size_t _Alignment);
@@ -79,8 +87,13 @@ extern "C" {
   _CRTIMP void *__cdecl _aligned_offset_recalloc(void *_Memory,size_t _Count,size_t _Size,size_t _Alignment,size_t _Offset);
 #endif
 
+#ifdef __DO_ALIGN_DEFINES
+#undef __DO_ALIGN_DEFINES
+
 #pragma pop_macro("_aligned_malloc")
 #pragma pop_macro("_aligned_free")
+
+#endif
 
 #define _MAX_WAIT_MALLOC_CRT 60000
 
